--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
@@ -24,12 +25,20 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.azoft.carousellayoutmanager:carousel:1.2.4'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'//fetch data
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'//convert from json to pojo
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'me.zhanghai.android.materialratingbar:library:1.3.2'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.android.support:design:28.0.0'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'io.paperdb:paperdb:2.6'
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
+    implementation 'com.google.firebase:firebase-storage:17.0.0'
+    implementation 'com.google.firebase:firebase-core:16.0.9'
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
