--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="movies.compubase.com.moviess">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +14,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activities.SplashActivity"
+        <activity android:name=".ui.activities.ViewMyRatesActivity"></activity>
+        <activity android:name=".ui.activities.DialogActivity" />
+        <activity
+            android:name=".ui.activities.SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,25 +25,29 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.activities.LoginActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.activities.LoginActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activities.HomeActivity"
             android:label="@string/title_activity_home"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
-        <activity android:name=".ui.activities.MovieActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".ui.activities.settingsActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".ui.activities.RegisterActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".ui.activities.MainActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".ui.activities.ForgotPassActivity"
-            android:screenOrientation="portrait">
-
-        </activity>
+        <activity
+            android:name=".ui.activities.MovieActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activities.settingsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activities.RegisterActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activities.MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activities.ForgotPassActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
